<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/popup_padding"
    android:background="@drawable/rounded_corners">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <TextView
            android:id="@+id/tv_popup_companyinfo_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/popup_companyinfo_name_title"
            android:textSize="@dimen/popup_title_text_size"
            android:textColor="@color/colorPopupTitleText"
            android:layout_weight=".9"/>
        <ImageView
            android:id="@+id/iv_popup_companyinfo_checkmark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_check"
            android:layout_weight=".1"
            />
    </LinearLayout>

    <EditText
        android:id="@+id/et_popup_companyinfo_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/popup_companyinfo_name_hint"
        android:backgroundTint="@color/colorEditTextUnderline"
        android:paddingTop="1dp"
        ></EditText>

    <TextView
        android:id="@+id/tv_popup_companyinfo_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/popup_companyinfo_title"
        android:textSize="@dimen/popup_title_text_size"
        android:textColor="@color/colorPopupTitleText"
        android:layout_marginTop="@dimen/popup_companyinfo_between_elements"/>

    <EditText
        android:id="@+id/et_popup_companyinfo_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/popup_companyinfo_title_hint"
        android:backgroundTint="@color/colorEditTextUnderline"
        android:paddingTop="1dp"
       />

    <TextView
        android:id="@+id/tv_popup_companyinfo_company"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/popup_companyinfo_company"
        android:textSize="@dimen/popup_title_text_size"
        android:textColor="@color/colorPopupTitleText"
        android:layout_marginTop="@dimen/popup_companyinfo_between_elements"/>

    <EditText
        android:id="@+id/et_popup_companyinfo_company"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/popup_companyinfo_company_hint"
        android:backgroundTint="@color/colorEditTextUnderline"
        android:layout_marginBottom="@dimen/popup_margin_bottom"
        android:paddingTop="1dp"/>

</LinearLayout>