<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/popup_padding">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/tv_popup_share_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/popup_share_title"
            android:textSize="@dimen/popup_title_text_size"
            android:textColor="@color/colorPopupTitleText"
            android:layout_weight=".9"/>
        <ImageView
            android:id="@+id/iv_popup_share_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_close"
            android:layout_weight=".1"
            />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="10dp"
        android:orientation="horizontal"
        >

        <ImageView
            android:id="@+id/iv_popup_share_dm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_dm"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:adjustViewBounds="true"
            android:maxWidth="@dimen/ic_phone_max_size"
            android:maxHeight="@dimen/ic_phone_max_size"
            android:scaleType="fitCenter"
            />

        <TextView
            android:id="@+id/tv_popup_share_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/popup_tv_share_phone_label"
            android:layout_toRightOf="@+id/iv_popup_share_dm"
            android:layout_marginLeft="5dp"
            android:layout_centerVertical="true"
            />
        <ImageView
            android:id="@+id/iv_popup_share_mail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_message"
            android:layout_toRightOf="@+id/tv_popup_share_phone"
            android:layout_marginLeft="120dp"
            android:layout_centerVertical="true"
            android:adjustViewBounds="true"
            android:maxWidth="@dimen/ic_dm_max_size"
            android:maxHeight="@dimen/ic_dm_max_size"
            android:scaleType="fitCenter"
            />

        <TextView
            android:id="@+id/tv_popup_share_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/popup_tv_share_email_label"
            android:layout_toRightOf="@+id/iv_popup_share_mail"
            android:layout_marginLeft="5dp"
            android:layout_centerVertical="true" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="10dp"
        android:orientation="horizontal"
        >

        <ImageView
            android:id="@+id/iv_popup_share_nearby"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_nearby"
            android:layout_centerVertical="true"
            android:layout_marginLeft="7dp"
            android:adjustViewBounds="true"
            android:maxWidth="30dp"
            android:maxHeight="30dp"
            android:scaleType="fitCenter"
            />

        <TextView
            android:id="@+id/tv_popup_share_nearby"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/popup_tv_share_nearby_label"
            android:layout_toRightOf="@+id/iv_popup_share_nearby"
            android:layout_marginLeft="5dp"
            android:layout_centerVertical="true"
            />
        <ImageView
            android:id="@+id/iv_popup_share_other"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_three_dot_horizontal"
            android:layout_toRightOf="@+id/tv_popup_share_nearby"
            android:layout_marginLeft="90dp"
            android:layout_centerVertical="true"
            android:adjustViewBounds="true"
            android:maxWidth="35dp"
            android:maxHeight="35dp"
            android:scaleType="fitCenter"
            />

        <TextView
            android:id="@+id/tv_popup_share_other"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/popup_tv_share_other_label"
            android:layout_toRightOf="@+id/iv_popup_share_other"
            android:layout_marginLeft="5dp"
            android:layout_centerVertical="true" />
    </RelativeLayout>


</LinearLayout>