<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/popup_padding">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="@dimen/popup_contact_information_title_margin_bottom"
        >
        <TextView
            android:id="@+id/tv_popup_contactinfo_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/popup_contact_information_title"
            android:textSize="@dimen/popup_title_text_size"
            android:textColor="@color/colorPopupTitleText"
            android:layout_weight=".9"/>
        <ImageView
            android:id="@+id/iv_popup_contact_information_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_check"
            android:layout_weight=".1"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="@dimen/popup_contact_information_element_margin">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_phone"
            android:adjustViewBounds="true"
            android:maxWidth="@dimen/ic_phone_max_size"
            android:maxHeight="@dimen/ic_phone_max_size"
            android:scaleType="fitCenter"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="@dimen/popup_contact_information_icon_edit_text_space_between"/>
        <EditText
            android:id="@+id/et_popup_contact_information_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/popup_contact_information_phone_hint"
            android:backgroundTint="@color/colorEditTextUnderlineTransparent"
            android:background="@color/colorEditTextUnderlineTransparent"
            android:paddingTop="@dimen/popup_contact_information_et_padding"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="@dimen/popup_contact_information_element_margin">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_phone"
            android:adjustViewBounds="true"
            android:maxWidth="@dimen/ic_phone_max_size"
            android:maxHeight="@dimen/ic_phone_max_size"
            android:scaleType="fitCenter"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="@dimen/popup_contact_information_icon_edit_text_space_between"/>
        <EditText
            android:id="@+id/et_popup_contact_information_cell"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/popup_contact_information_cell_hint"
            android:backgroundTint="@color/colorEditTextUnderlineTransparent"
            android:background="@color/colorEditTextUnderlineTransparent"
            android:paddingTop="@dimen/popup_contact_information_et_padding"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="@dimen/popup_contact_information_element_margin">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_message"
            android:adjustViewBounds="true"
            android:maxWidth="@dimen/ic_phone_max_size"
            android:maxHeight="@dimen/ic_phone_max_size"
            android:scaleType="fitCenter"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="@dimen/popup_contact_information_icon_edit_text_space_between"/>
        <EditText
            android:id="@+id/et_popup_contact_information_fax"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/popup_contact_information_fax_hint"
            android:backgroundTint="@color/colorEditTextUnderlineTransparent"
            android:background="@color/colorEditTextUnderlineTransparent"
            android:paddingTop="@dimen/popup_contact_information_et_padding"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="@dimen/popup_contact_information_element_margin">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_message"
            android:adjustViewBounds="true"
            android:maxWidth="@dimen/ic_phone_max_size"
            android:maxHeight="@dimen/ic_phone_max_size"
            android:scaleType="fitCenter"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="@dimen/popup_contact_information_icon_edit_text_space_between"/>
        <EditText
            android:id="@+id/et_popup_contact_information_mailing_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/popup_contact_information_mailing_address_hint"
            android:backgroundTint="@color/colorEditTextUnderlineTransparent"
            android:background="@color/colorEditTextUnderlineTransparent"
            android:paddingTop="@dimen/popup_contact_information_et_padding"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="@dimen/popup_contact_information_element_margin">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_message"
            android:adjustViewBounds="true"
            android:maxWidth="@dimen/ic_phone_max_size"
            android:maxHeight="@dimen/ic_phone_max_size"
            android:scaleType="fitCenter"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="@dimen/popup_contact_information_icon_edit_text_space_between"/>
        <EditText
            android:id="@+id/et_popup_contact_information_street_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/popup_contact_information_street_address_hint"
            android:backgroundTint="@color/colorEditTextUnderlineTransparent"
            android:background="@color/colorEditTextUnderlineTransparent"
            android:paddingTop="@dimen/popup_contact_information_et_padding"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="@dimen/popup_contact_information_element_margin">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_message"
            android:adjustViewBounds="true"
            android:maxWidth="@dimen/ic_phone_max_size"
            android:maxHeight="@dimen/ic_phone_max_size"
            android:scaleType="fitCenter"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="@dimen/popup_contact_information_icon_edit_text_space_between"/>
        <EditText
            android:id="@+id/et_popup_contact_information_website"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/popup_contact_information_website_hint"
            android:backgroundTint="@color/colorEditTextUnderlineTransparent"
            android:background="@color/colorEditTextUnderlineTransparent"
            android:paddingTop="@dimen/popup_contact_information_et_padding"

            />
    </LinearLayout>
</LinearLayout>